<resources>
    <string name="app_name">Reporter</string>
    <string name="image_content_login">reporter app logo</string>
    <string name="fragment_signIn">SignIn Fragment</string>
    <string name="fragment_signUp">SignUp Fragment</string>
    <string name="hint_userId">Enter Email ID / Mobile</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_enter_mobileNo">Enter Mobile No</string>
    <string name="hint_create_password">Create Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_enter_registered_mobileNo">Enter Registered Mobile No</string>
    <string name="hint_enter_old_password">Enter Old Password</string>
    <string name="hint_enter_new_password">Enter New Password</string>
    <string name="hint_enter_location">Enter Location</string>
    <string name="hint_enter_phone_number">Enter Phone Number</string>
    <string name="hint_enter_landline">Mobile Number</string>
    <string name="hint_enter_confirm_password">Enter Confirm Password</string>
    <string name="text_forgot_userId">Forgot User ID?</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_signUp">Please Sign Up from me</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_verify">VERIFY</string>
    <string name="content_description_image_here">Search Article</string>
    <string name="text_otp">You will receive One Time Password(OTP) on your registered mobile number</string>

    <string name="camera_and_location_rationale">Camera and Audio Recorder Required</string>
    <string name="camera_and_permission">Camera Permission Required</string>
    <string name="returned_from_app_settings_to_activity">Returned From App Settings</string>
    <string name="text_submitting_signUp_details">Thank you for Submitting your information, we will get in touch with
        you shortly
    </string>

    <string name="article_details">Article Details</string>
    <string name="want_to_delete_this_article">Do you want to delete this article?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_article">Edit Article</string>
    <string name="create_article">Create Article</string>
    <string name="please_install_a_audio_recorder">Please install a Audio Recorder.</string>
    <string name="select_a_file_to_upload">Select a File to Upload</string>
    <string name="please_install_a_file_manager">Please install a File Manager.</string>
    <string name="article_title_required">Article Title Required</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="type_not_should_be_minus_one_forgot_user_id_activity">type not should be -1 in ForgotUserId Activity
    </string>
    <string name="my_profile">My Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="onSuccess">onSuccess</string>
    <string name="onCancel">onCancel</string>
    <string name="onError">onError</string>
    <string name="unread">Unread</string>
    <string name="all">ALL</string>
    <string name="set_article_id_if_you_need_article_details">Set article Id, If you need article details.</string>
    <string name="search_result">search_result</string>
    <string name="search_hint">Search Hint</string>

    <!-- Reporter Name-->
    <string name="reporter_name">Reporter</string>

</resources>
