<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="@id/etEnterMobileNo"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etCreatePassword">

        <EditText
                android:id="@+id/etEnterNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:hint="@string/hint_enter_new_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="@id/etEnterMobileNo"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etCreatePassword">

        <EditText
                android:id="@+id/etEnterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/hint_confirm_password"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/tvSubmitNewPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="24dp"
            android:text="@string/text_submit"
            android:textColor="#C62828"
            android:gravity="center"
            android:background="@drawable/rounded_corners_accent"/>
</LinearLayout>