<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="32dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:focusableInTouchMode="true"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent">
        <EditText
                android:id="@+id/UserId"
                android:layout_width="match_parent"
                android:hint= "@string/hint_userId"
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="60"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="@id/etUserId"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etUserId">

        <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/tvForgotUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            android:textColor="#C62828"
            android:text="@string/text_forgot_userId"/>

    <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@id/password"
            android:textColor="#C62828"
            android:text="@string/text_forgot_password"/>

    <TextView
            android:id="@+id/tvSIgnIn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@string/text_forgot_userId"
            app:layout_constraintEnd_toEndOf="@string/text_forgot_password"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="SIGN IN"
            android:textColor="#C62828"
            android:gravity="center"
            android:background="@drawable/rounded_corners_accent"/>


</android.support.constraint.ConstraintLayout>
</ScrollView>