<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_screen">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="24dp">

    <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:hideNameCode="true"
            android:layout_marginRight="8dp"
            app:showFlag="false"
            app:countryPreference="IN,US,AU"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etEnterRegisteredMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/hint_enter_registered_mobileNo"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
            android:id="@+id/tvTextOtp"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/text_otp"
              android:textStyle="bold"
              android:textColor="@color/tw__composer_black"
              android:visibility="gone"
              android:layout_margin="24dp"/>

    <LinearLayout
            android:id="@+id/llEnterOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:visibility="gone"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/editTextOne"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:layout_weight="1"
                android:focusable="true"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:background="@drawable/white_rounded_corners_black_ash"/>
        <requestFocus/>

        <EditText
                android:id="@+id/editTextTwo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="1"
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/white_rounded_corners_black_ash"/>
        <EditText
                android:id="@+id/editTextThree"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_marginLeft="8dp"
                android:imeOptions="actionNext"
                android:layout_marginRight="8dp"
                android:maxLength="1"
                android:gravity="center"
                android:background="@drawable/white_rounded_corners_black_ash"/>
        <EditText
                android:id="@+id/editTextFour"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLength="1"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/white_rounded_corners_black_ash"/>

        <TextView
                android:id="@+id/tvResendOtp"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text=" Resend OTP"
                android:textSize="16dp"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"/>

    </LinearLayout>
    <TextView
            android:id="@+id/tvSubmitNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="24dp"
            android:text="@string/text_submit"
            android:visibility="visible"
            android:textColor="#C62828"
            android:gravity="center"
            android:background="@drawable/rounded_corners_accent"/>
    <TextView
            android:id="@+id/tvVerifyNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="24dp"
            android:text="@string/text_verify"
            android:textColor="#C62828"
            android:visibility="gone"
            android:gravity="center"
            android:background="@drawable/rounded_corners_accent"/>

</LinearLayout>
</ScrollView>