<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent">
         <EditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:hint="@string/hint_enter_old_password"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/oldPassword"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent">
        <EditText
                android:id="@+id/etEnterNewPassword"
                android:layout_width="match_parent"
                android:hint="@string/hint_enter_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPassword"
            android:layout_margin="8dp">
        <EditText
                android:id="@+id/etEnterConfirmPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/hint_enter_confirm_password"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/tvSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="SAVE"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/white_stroke_corners_black_divider_dark_ash"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:id="@+id/tvCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="CANCEL"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/white_stroke_corners_black_divider_dark_ash"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>

</android.support.constraint.ConstraintLayout>